--- a/css1/css.html
+++ b/css1/css.html
@@ -3,8 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS</title>
+    <style>
+        h1 {
+            color: blue;
+            font-family: Tahoma;
+            font-size: 200%;
+
+        }
+
+        p {
+            color: red;
+            font-family: Arial;
+            font-size: 120%;
+            border: 1px solid grey;
+            padding: 10px;
+        }
+        #element1 {
+            color: blue;
+        }
+    </style>
 </head>
 <body>
 
+<h1>CodeGym</h1>
+
+<p>Mai Thanh Hải</p>
+<p>Trần Đình Quân</p>
+<p>Tuấn Tèo</p>
+<p id="element1">Hải Real</p>
 </body>
 </html>
